<resources>
    <string name="app_name">Quick Trips</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="user_name">User Name</string>
    <string name="password">Password</string>
    <string name="sign_in">Sign in</string>
    <string name="sign_up">Sign up</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="pending_trips">Pending Trips</string>
    <string name="locations">Locations</string>
    <string name="profile">Profile</string>
    <string name="settings">Settings</string>
    <string name="user_pending_placeholder">This is where Users will view their pending trips awaiting approval</string>
    <string name="user_locations_placeholder">This is where Users will see list of Locations to travel to</string>
    <string name="user_profile_placeholder">This is where Users will see their own profile and list of travelled locations</string>
    <string name="log_out">Log out</string>
    <string name="i_am_the_doctor_check">I Am The Doctor</string>
    <string name="preference_file_key">myAppPref</string>
    <string name="saved_user_id">current_user_id</string>
    <string name="saved_user_isDoctor">current_user_isDoctor</string>
    <string name="too_short_user">Sorry, username must be 4-10 characters long!</string>
    <string name="too_short_password">Password is too short. We have to keep our connection secure!</string>
    <string name="username_taken">Have we met before or to great minds just think alike? Username taken.</string>
    <string name="new_user_welcome">Welcome to the TARDIS, please log in!</string>
</resources>